package com.tutorialspoint;

/*
PROJECT NAME : design-patterns-java
Module NAME: IntelliJ IDEA
Author Name : @ DRRONIDZ
DATE : 8/8/2021 12:09 AM
*/

public interface Shape {
    public void draw();
}
